Reduces blog card font size to prevent bad spacing (#40)

--- a/scss/partials/static/_blog.scss
+++ b/scss/partials/static/_blog.scss
@@ -77,7 +77,7 @@ $white: #ffffff;
 		// Blog Card Title
 		.blog-card-content-title {
 			font-family: $blog-card-title-font-family;
-			font-size: 1.5rem;
+			font-size: 1.25rem;
 			font-weight: bold;
 			margin-bottom: .5rem;
 		}
@@ -136,6 +136,9 @@ $white: #ffffff;
 		flex-grow: 2;
 		height: auto;
 		width: 90%;
+		.blog-card-content-title {
+			font-size: 1.5rem;
+		}
 	}
 	// Blog Card "Read More" Button
 	.blog-card-content-button {
